[package]
name = "reposync"
version = "0.1.0"
authors = ["Davide Baldo <davide.baldo@zextras.com>"]
edition = "2018"

[dependencies]
reposync-lib = { path = "generated", version = "1.0.0", features = ["server"] }
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = "5.0.2"
log = "0.4.0"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = {version = "0.13", optional = false}
serde_ignored = {version = "0.1.1", optional = false}
url = {version = "2.1", optional = false}
lazy_static = { version = "1.4", optional = false }
percent-encoding = {version = "2.1.0", optional = false}
regex = {version = "1.3", optional = false}
frunk = { version = "0.3.0", optional = false }
frunk_derives = { version = "0.3.0", optional = false }
frunk_core = { version = "0.3.0", optional = false }
frunk-enum-derive = { version = "0.2.0", optional = false }
frunk-enum-core = { version = "0.2.0", optional = false }
env_logger = "0.7"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "stream"] }