[package]
name = "reposync"
version = "0.10.0"
authors = ["Davide Baldo <davide.baldo@zextras.com>"]
edition = "2021"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
data-encoding = "2.3"
env_logger = "0.11"
flate2 = "1.0"
futures = "0.3"
log = "0.4"
mime = "0.3"
percent-encoding = "2.1"
pgp = "0.14"
regex = "1.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha-1 = "0.10"
sha2 = "0.10"
tempfile = "3.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.1"
xml-rs = "0.8"

[dev-dependencies]
mockall = "0.13"
